fixed wrapping of portfolio navigation

--- a/purpleandbold/src/components/Portfolio/portfolionav.module.sass
+++ b/purpleandbold/src/components/Portfolio/portfolionav.module.sass
@@ -38,6 +38,8 @@
       padding: .275em 1.2em
     @include phone-large
       font-size: 0.85em
+      margin: 0px 0px 
+      // padding: 0px 0px
     &.grow 
       animation: portfolio-tag-bounce .5s forwards
     &:nth-child(1)
